// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Box passes the basic snapshot test 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "height": 10,
        "width": 10,
      }
    }
    animatedStyle={
      {
        "value": {
          "height": 10,
          "width": 10,
        },
      }
    }
    collapsable={false}
    style={
      {
        "height": 10,
        "width": 10,
      }
    }
  />
</View>
`;

exports[`Atoms/Box renders correctly with different props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "backgroundColor": "#ff0000",
      }
    }
    animatedStyle={
      {
        "value": {
          "backgroundColor": "#ff0000",
        },
      }
    }
    collapsable={false}
    style={
      {
        "backgroundColor": "#ff0000",
      }
    }
  >
    Test Text
  </View>
</View>
`;
